--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi>=0.119.1",
+    "httpx>=0.28.1",
     "mcp[cli]>=1.9.4",
 ]
