--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.119.1",
+    "fastmcp>=2.12.5",
     "httpx>=0.28.1",
     "mcp[cli]>=1.9.4",
 ]
