--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "fastmcp>=2.12.5",
     "httpx>=0.28.1",
     "mcp[cli]>=1.9.4",
+    "starlette>=0.47.0",
+    "uvicorn>=0.34.3",
 ]
